<?xml version="1.0"?>
<package format="2">
  <name>speed2wheel</name>
  <version>0.0.0</version>
  <description>Change from linear/angular velocity to speed of each wheel (right/left wheel)</description>

  <maintainer email="mariollamas@hotmail.es">mario</maintainer>
  <license>TODO</license>
  <author email="mariollamas@hotmail.es">Mario Llamas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
  </export>
</package>
